<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".controller.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#65B9FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        style="@style/MainButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="loginButtonOnClick"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:errorEnabled="true"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:errorEnabled="true"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="63dp"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/loginEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manutencao_novo"/>

</androidx.constraintlayout.widget.ConstraintLayout>