<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.NewOrderService">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/ordem_de_serevi_o_id_123"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#65B9FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsClientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/client"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#65B9FB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsTitleId"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsClientText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="Client"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsClientTitle"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsDeviceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/device"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#65B9FB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsClientText"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsDeviceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="iPhone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsDeviceTitle"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#65B9FB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsDeviceText"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="Nao liga"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsDetailsTitle"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsOpenedAtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/aberto_em"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#65B9FB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsDetailsText"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsOpenedAtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="20/04/2023"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsOpenedAtTitle"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsFinishedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/concluido_em"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#65B9FB"
        app:layout_constraintStart_toEndOf="@id/orderDetailsOpenedAtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsDetailsText"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsFinishedAtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="23/04/2023"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/orderDetailsFinishedTitle"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsFinishedTitle"
        android:visibility="visible"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsSolutionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="@string/solu_o"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#65B9FB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsOpenedAtText"
        tools:ignore="TextContrastCheck"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/orderDetailsSolutionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:text="Formatar iPhone"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsSolutionTitle"
        tools:ignore="TextContrastCheck"/>

    <Button
        android:id="@+id/orderDetailsSolutionButton"
        style="@style/MainButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="loginButtonOnClick"
        android:text="@string/solucionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDetailsSolutionText"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/orderDetailsDeleteButton"
        style="@style/MainButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="loginButtonOnClick"
        android:text="@string/deletar"
        android:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDetailsSolutionButton"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>